Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}

0.57 2014-09-02
        * Fix the homepage link in the meta info.

0.56 2014-09-02
        * This is the first release to include the deprecations and backwards
          incompatibilities from 0.55. Please see that release's notes as
          well!
        * Skip parallel tests on Windows. This may be a bug in
          Test::Class::Moose or Parallel::ForkManager, but for now we're
          punting. Reported by Alexandr Ciornii. GitHub issue #36.
        * Removed Sub::Attribute from the "recommends" list. This is required
          now, and listing it as both required and recommends is confusing.
        * Lots of doc fixes.

0.55 2014-03-18
        * There are a number of deprecations and backwards incompatible
          changes in this release!
        * Calling runtests() on Test::Class::Moose or a subclass of that class
          is now deprecated. Use the new Test::Class::Moose::Runner class
          instead.
        * The Test::Class::Moose::Role::Parallel role no longer does
          anything. You can use the Test::Class::Moose::Runner class to run
          tests in parallel by passing a jobs parameter to its
          constructor. See the docs for details.
        * Parallel testing is now done _per test class instance_ rather than
          per method. In other words, each subprocess instantiates a test
          class and runs all of its test methods.
        * You can now run multiple instances of a test class by using the
          Test::Class::Moose::Role::ParameterizedInstances role. See the
          Test::Class::Moose docs for details.
        - All private methods defined as lexically-scoped variables in
          Test::Class::Moose have been made actual methods so that roles and
          subclasses can affect them.
        - Removed MooseX::ClassAttribute from the list of prereqs in
          Makefile.PL. Test::Class::Moose loaded this but never used it.

0.54 2014-03-18