@@ -3,7 +3,7 @@ author           = Curtis "Ovid" Poe <ovid@cpan.org>
 license          = Perl_5
 copyright_holder = Curtis "Ovid" Poe
 copyright_year   = 2014
-version          = 0.57
+version          = 0.58
 
 ; basic functionality of dzil
 [@Basic]
