@@ -19,10 +19,16 @@ has 'notes' => (
     default => sub { {} },
 );
 
-has skipped => (
+has 'skipped' => (
     is        => 'rw',
     isa       => 'Str',
     predicate => 'is_skipped',
+);
+
+has 'passed' => (
+    is      => 'rw',
+    isa     => 'Bool',
+    default => 0,
 );
 
 1;
@@ -61,6 +67,10 @@ If the class or method is skipped, this will return the skip message.
 =head2 C<is_skipped>
 
 Returns true if the class or method is skipped.
+
+=head2 C<passed>
+
+Returns true if the class or method passed.
 
 =head2 C<time>
 
