@@ -1,0 +1,20 @@
+package TestsFor::Pass;
+use Test::Class::Moose;
+
+sub test_a_good {
+    ok 1;
+}
+
+sub test_a_good_2 {
+    ok 1;
+}
+
+sub test_b_good {
+    ok 1;
+}
+
+sub test_b_good_2 {
+    ok 1;
+}
+
+1;
